--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@
     color: #FFFFFF;
 }
 
+.watch-button a:hover{
+
+    font-size: 150%;
+    background-color: blue;
+}
+
 /* -----------------
     First Part End
 ---------------------*/
@@ -278,6 +284,12 @@
     grid-template-columns: repeat(3, 1fr);
     margin-left: 5px;
 
+}
+
+.icons{
+    padding-top: 80px;
+    display: flex;
+    justify-content: space-around;
 }
 
 
